Bug 563361 - Increase the maximum chunk size for delivering stream data to a plugin so that poorly-written Flash which assume stuff about streams don't break, r=bent